--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPIG9BafdYl5uwBPLbUiVec",
+      "authorship_tag": "ABX9TyNXXiY9UWUy/FvCdvDGOOeo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -476,6 +476,80 @@
       ],
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IcAY-IYuPOcQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "También puede definirse la función para que devuelva algo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EJkxI_tfPTlw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e4547b05-1082-4311-b80b-39121733716d"
+      },
+      "source": [
+        "def funcion_que_devuelve_algo():\n",
+        "  return 'Hola'\n",
+        "print(funcion_que_devuelve_algo())"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hola\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O-NfJ77QPjJV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Se le pueden pasar parámetros a la función indicando los argumentos entre los paréntesis"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xgrrfZ9qPqCD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "41eda7b8-4b86-4bd8-afb4-cc8d2c005370"
+      },
+      "source": [
+        "def suma(a,b):\n",
+        "  print(a+b)\n",
+        "suma(1,2)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
