--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXXiY9UWUy/FvCdvDGOOeo",
+      "authorship_tag": "ABX9TyP+dy9s1uXwG1HYnvp+MAgI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -408,6 +408,153 @@
             "tags": []
           },
           "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ERlvCtpFQXcc",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Bucles**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3dOHSvLuQd8M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9f6ac3fc-4b48-4205-ba19-205dcf21c0f3"
+      },
+      "source": [
+        "lista"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ti_ZyF01QiIE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        },
+        "outputId": "a8a953f5-62a8-481d-daa7-8691c4a52161"
+      },
+      "source": [
+        "for elemento in lista:\n",
+        "  print(elemento)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "baixrwUpQlxW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2001f096-5edc-4b66-fa75-4b121c97648f"
+      },
+      "source": [
+        "nueva_lista = []\n",
+        "for elemento in lista:\n",
+        "  nueva_lista.append(elemento+2)\n",
+        "nueva_lista"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 4, 5, 6, 7, 8, 9, 10]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jPNToBYKQyI4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Es muy útil poder reducir el *for* anterior a una sola línea si se quiere operar sobre cada uno de los elementos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KrT5kTruQ6yB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d835e9f5-3b40-420b-aedc-f3bb33e191bf"
+      },
+      "source": [
+        "nueva_lista_2 = [elemento + 2 for elemento in lista]\n",
+        "nueva_lista_2"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 4, 5, 6, 7, 8, 9, 10]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
         }
       ]
     },
