--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+dy9s1uXwG1HYnvp+MAgI",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMFuDZK+9WwaeYefZEKh94Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -697,6 +698,145 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XiJvbAk6SSgN",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Clases**\n",
+        "\n",
+        "Como en otros lenguajes de programación, las clases contienen propiedades y métodos. En este caso particular tiene una función de inicio (que se ejecuta al instanciar la clase) que se llama *__init__(self)* (self es para referirse a la clase en cuestión).\n",
+        "Por convención, suelen nombrarse con la primera letra en mayúscula."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aFjRnW-uSY9h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "36aa23e8-0273-44f6-8f44-5e4d47871a29"
+      },
+      "source": [
+        "class Persona():\n",
+        "  \n",
+        "  def __init__(self):\n",
+        "    self.nombre = 'Javier'\n",
+        "    self.apellido= 'Lledó'\n",
+        "\n",
+        "  def presentarse(self):\n",
+        "    print('Hola, me llamo', self.nombre, self.apellido)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hola, me llamo Javier Lledó\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tUA9JVO4T_AQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Para instanciarla simplemente se hace de la siguiente manera:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M_40IAeeUCEj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a5c7fd51-85c7-4fba-a70e-bb3cc6b216b1"
+      },
+      "source": [
+        "persona = Persona()\n",
+        "persona.presentarse()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hola, me llamo Javier Lledó\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rJeXZv86UxDW",
+        "colab_type": "text"
+      },
+      "source": [
+        "También puede usarse __init__ como constructor, y a la hora de instanciarlo pasarle esos parámetros"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K1QxuZA6U1Ne",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f981bb40-b4d2-49ad-a774-fea56c33fb2a"
+      },
+      "source": [
+        "class Persona02():\n",
+        "\n",
+        "  def __init__(self, nombre, apellido):\n",
+        "    self.nombre = nombre\n",
+        "    self.apellido= apellido\n",
+        "\n",
+        "  def presentarse(self):\n",
+        "    print('Hola, me llamo', self.nombre, self.apellido)\n",
+        "\n",
+        "persona02 = Persona02(nombre='Javier', apellido = 'Lledó')\n",
+        "persona02.presentarse()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hola, me llamo Javier Lledó\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vMXAC9z6Vd-m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
