--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFuDZK+9WwaeYefZEKh94Z",
+      "authorship_tag": "ABX9TyPIybbgjRoikzjJLrPAz+AU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -826,17 +826,61 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "vMXAC9z6Vd-m",
-        "colab_type": "code",
-        "colab": {}
+        "id": "BgYsAghnW9bm",
+        "colab_type": "text"
       },
       "source": [
-        ""
+        "**Librerías**\n",
+        "\n",
+        "Pueden importarse librerías para poder usar sus funciones con *import*."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oZD6Ek69XH7t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dfc3b212-4c6b-4ddc-d207-bf219399ab2d"
+      },
+      "source": [
+        "import random\n",
+        "random.random()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.46818641822142293"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xwX1M7bnYFaX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Algunas librerías interesantes son las siguientes:\n",
+        "\n",
+        "*   random\n",
+        "*   numpy\n",
+        "\n"
+      ]
     }
   ]
 }
