--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPIybbgjRoikzjJLrPAz+AU",
+      "authorship_tag": "ABX9TyPbtZTc/FLz57QBqqMkl/WO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "variable = 3\n",
         "variable"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +117,7 @@
         "lista.append(8)\n",
         "lista"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
       "source": [
         "len(lista)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,7 @@
       "source": [
         "lista[1]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
       "source": [
         "lista[-1]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
         "               'clave 04': [1,2,3,4]}\n",
         "diccionario"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
       "source": [
         "diccionario.keys()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +356,7 @@
       "source": [
         "diccionario.values()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
       "source": [
         "diccionario.items()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +436,7 @@
       "source": [
         "lista"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
         "for elemento in lista:\n",
         "  print(elemento)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +502,7 @@
         "  nueva_lista.append(elemento+2)\n",
         "nueva_lista"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +543,7 @@
         "nueva_lista_2 = [elemento + 2 for elemento in lista]\n",
         "nueva_lista_2"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,7 +588,7 @@
         "\n",
         "nueva_funcion()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +622,7 @@
         "\n",
         "funcion_que_no_hace_nada()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +651,7 @@
         "  return 'Hola'\n",
         "print(funcion_que_devuelve_algo())"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
         "  print(a+b)\n",
         "suma(1,2)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "  def presentarse(self):\n",
         "    print('Hola, me llamo', self.nombre, self.apellido)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +769,7 @@
         "persona = Persona()\n",
         "persona.presentarse()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +814,7 @@
         "persona02 = Persona02(nombre='Javier', apellido = 'Lledó')\n",
         "persona02.presentarse()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +834,7 @@
       "source": [
         "**Librerías**\n",
         "\n",
-        "Pueden importarse librerías para poder usar sus funciones con *import*."
+        "Pueden importarse librerías para poder usar sus funciones con *import*, y puede indicarse de qué manera hacer referencia a ellas."
       ]
     },
     {
@@ -852,7 +852,7 @@
         "import random\n",
         "random.random()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -875,10 +875,16 @@
         "colab_type": "text"
       },
       "source": [
-        "Algunas librerías interesantes son las siguientes:\n",
+        "Algunas librerías interesantes son las siguientes (junto con los códigos que suelen usarse para referenciarse):\n",
         "\n",
         "*   random\n",
-        "*   numpy\n",
+        "*   numpy (np)\n",
+        "*   scipy (sc)\n",
+        "*   sklearn (sk)\n",
+        "*   matplotlib.pyplot (plt)\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ]
     }
