--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbtZTc/FLz57QBqqMkl/WO",
+      "authorship_tag": "ABX9TyMVx+66ku2qA+8N0V/YIZDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,6 +240,51 @@
             "tags": []
           },
           "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L3kyC2wCg5h-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Para tomar los datos de cierta columna de una matriz sería de la siguiente manera (es útil numpy para trabajar con arrays y no con listas):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7pEuoWwxg5Oo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d57b363-df33-4a47-c84e-d31d6d19f412"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "matriz = [[1,2,3],\n",
+        "          [4,5,6],\n",
+        "          [7,8,9]]\n",
+        "np.array(matriz)[:,1]"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 5, 8])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
         }
       ]
     },
@@ -880,7 +925,7 @@
         "*   random\n",
         "*   numpy (np)\n",
         "*   scipy (sc)\n",
-        "*   sklearn (sk)\n",
+        "*   sklearn (sk). De ésta también se pueden descargar datasets.\n",
         "*   matplotlib.pyplot (plt)\n",
         "\n",
         "\n",
