--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMVx+66ku2qA+8N0V/YIZDX",
+      "authorship_tag": "ABX9TyNEnwuJMEQyukel4x/O91rD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -931,6 +931,155 @@
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "shIg-nZblxR3",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Librería Numpy**\n",
+        "\n",
+        ".array para crear un array\n",
+        "\n",
+        ".transpose para transponer una matriz, aunque con .T también es válido\n",
+        "\n",
+        "@ se usa para la multiplicación matricial, aunque esto es genérico de Python\n",
+        "\n",
+        ".ones para un array de unos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UMfUrPIEmEj1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "2155f82d-b7c8-480a-e671-786d2df146c8"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "matriz = [[1,2,3],[4,5,6],[7,8,9]]\n",
+        "\n",
+        "np.array(matriz)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6],\n",
+              "       [7, 8, 9]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6yACD17Wmc9d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "1bef092e-f944-4cb2-cdbb-d37074a33535"
+      },
+      "source": [
+        "matriz_traspuesta = np.transpose(matriz)\n",
+        "matriz_traspuesta"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 4, 7],\n",
+              "       [2, 5, 8],\n",
+              "       [3, 6, 9]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1-85cAihmu3u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "a5357e43-3970-4edd-e2bc-3f8fb18146c1"
+      },
+      "source": [
+        "matriz @ matriz_traspuesta"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 14,  32,  50],\n",
+              "       [ 32,  77, 122],\n",
+              "       [ 50, 122, 194]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vxsMcR6Ym3Hu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3da878da-d8c9-488d-aa37-43f85854ac9d"
+      },
+      "source": [
+        "np.ones(3)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 1., 1.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
       ]
     }
   ]
