--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEnwuJMEQyukel4x/O91rD",
+      "authorship_tag": "ABX9TyNU4frXJtCUZEr/1cTsMiAs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -948,7 +948,9 @@
         "\n",
         "@ se usa para la multiplicación matricial, aunque esto es genérico de Python\n",
         "\n",
-        ".ones para un array de unos"
+        ".ones para un array de unos\n",
+        "\n",
+        ".linealg.inv es la inversa de una matriz"
       ]
     },
     {
@@ -1079,6 +1081,40 @@
             "tags": []
           },
           "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "849MbiAZnJQ1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "687455bf-87ce-491f-fb70-a4ca2ac8d970"
+      },
+      "source": [
+        "##Se ha cambiado de matriz en el ejemplo porque la anterior era singular\n",
+        "matriz_nueva = [[1,5,3],[5,9,8],[8,9,7]]\n",
+        "np.linalg.inv(matriz_nueva)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.16363636, -0.14545455,  0.23636364],\n",
+              "       [ 0.52727273, -0.30909091,  0.12727273],\n",
+              "       [-0.49090909,  0.56363636, -0.29090909]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
         }
       ]
     }
